# src/handlers/ingest.ts
@@ -1,3 +1,5 @@
-import tasks from '../services/tasks';
+import DataSources from '../entities/data-sources/DataSources';
 
-export default async (_: any, { namespace }: { namespace: string }): Promise<void> => tasks.delegate('ingest', [namespace]);
+export default async (_: any, { namespace }: { namespace: string }): Promise<void> => {
+	await DataSources.ingest(namespace);
+};
